# krisp_ai_engineer_role_task

./: .env.example  .gitignore  README.md  pyproject.toml
data/: evaluation.json  output.json
src/: main.py
src/core/: __init__.py  config.py  logger.py
src/data/: __init__.py  data_loader.py
src/evaluation/: __init__.py  clustering_metrics.py
src/models/: __init__.py  cluster.py  question.py
src/prompts/: __init__.py  classification_prompt.py  cluster_prompt.py
src/services/: __init__.py  classification_service.py  cluster_service.py  dedupe_service.py  embedding_service.py
src/utils/: __init__.py  json_utils.py  log_utils.py
